--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 pubspec.lock
 .c9
 .idea/
-.devcontainer/*
+#.devcontainer/*
 !.devcontainer/README.md
 !.devcontainer/recommended-devcontainer.json
 !.devcontainer/recommended-Dockerfile
