--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,11 @@
 {
 	"name": "Node.js & TypeScript",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
+	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-16-buster",
 	"features": {
-		"ghcr.io/devcontainers-extra/features/angular-cli:2": {}
+		"ghcr.io/devcontainers-extra/features/angular-cli:2": {
+			"version": 14
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
