--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,15 @@
       {
         "type": "node",
         "request": "launch",
+        "name": "Launch current file w/ node",
+        "args": ["${relativeFile}"],
+        "cwd": "${workspaceRoot}",
+        "internalConsoleOptions": "openOnSessionStart"
+      },
+      {
+        "type": "node",
+        "request": "launch",
         "name": "Launch current file w/ ts-node",
-        "protocol": "inspector",
         "args": ["${relativeFile}"],
         "cwd": "${workspaceRoot}",
         "runtimeArgs": ["-r", "ts-node/register"],
